# pool-tracker

./: .env  .gitignore  README.md  docker-compose.yaml
api/: .dockerignore  Dockerfile  README.md  pyproject.toml  sql_app.db
api/alembic/: env.py
api/alembic/versions/: 4cd3cba23dfb_add_email_column.py  fd22a78267b6_initial_database_configuration.py
api/db/: config.py  crud.py  database.py  game_repository.py  main.py  player_repository.py
api/db/auth/: jwt_bearer.py  user.py  validate_auth.py
api/db/migrations/: env.py
api/db/migrations/versions/: 2255359ccd0e_initial_model_creation.py
api/db/models/: README.md  game.py  player.py
api/db/repositories/: README.md  game_repository.py  player_repository.py
api/db/routers/: README.md  auth.py  games.py  players.py
api/db/schemas/: README.md  game.py  player.py
api/src/db/: engine.py
auth/: Dockerfile  pyproject.toml
auth/alembic/: env.py
auth/alembic/versions/: 5196f6f064f0_init_database.py
auth/auth/: config.py  database.py  main.py
auth/auth/exceptions/: database_exceptions.py
auth/auth/helpers/: auth.py  jwks.py
auth/auth/models/: user.py
auth/auth/public/.well-known/: jwks.json
auth/auth/repositories/: user_repository.py
auth/auth/routers/: token.py  users.py
auth/auth/schemas/: token.py  user.py
auth/tests/helpers/: test_auth.py
ui/: Dockerfile  package-lock.json  package.json
ui/src/: App.tsx  config.ts  router.tsx
ui/src/components/: PageHeader.tsx
ui/src/pages/: Player.tsx  PlayerPage.tsx
ui/src/services/: PlayerService.ts  UserService.ts
ui/src/types/: Player.ts
