[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["codeanish <anish@codeanish.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.3"
fastapi = "^0.104.0"
sqlalchemy = "^2.0.22"
uvicorn = "^0.23.2"
psycopg2-binary = "^2.9.9"
alembic = "^1.12.1"
pydantic = "^2.4.2"
email-validator = "^2.1.0.post1"
pyjwt = "^2.8.0"
requests = "^2.31.0"
cryptography = "^41.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
